--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Exemple</title>
+    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
 </head>
 <body>
     <div class="container" id="exemple"></div>
@@ -23,7 +24,7 @@
         background-color: #444;
     }
     .container{
-        width: 800px;
+        max-width: 800px;
         margin-left: auto;
         margin-right: auto;
         display: flex;
